tests/fail_write_alias.rte
fun main() {
  def x = new 42;
  def y = x;
  *x = 0; // error: pointer does not have write privilege
  return *y;
}
